test/corpus/definitions.txt
===========
Function declaration - no params
===========

void() NoParamFunction1;

---

(source_file
    (function_declaration
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)))

===========
Function declaration - C-style
===========

void NoParamFunction1 ();

---

(source_file
    (function_declaration
        result: (simple_type)
        name: (identifier)
        parameters: (parameter_list)))

===========
Function declaration - multiple params
===========

float(entity param1, entity param2) TestFunction4;

---

(source_file
    (function_declaration
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)))

===========
Function declaration - field pointer
===========

float(.entity ptr) TestFunction4;

---

(source_file
    (function_declaration
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (field_ptr_type (simple_type))
                name: (identifier)))
        name: (identifier)))

===========
Function declaration - function reference
===========

float(void() funref) TestFunction4;

---

(source_file
    (function_declaration
        result: (simple_type)
        parameters: (parameter_list
            (parameter
               type: (function_ref_type
                   result: (simple_type)
                   parameters: (parameter_list))
                name: (identifier)))
        name: (identifier)))

===========
Builtin function definition
===========

void() NoParamFunction1 = #12;
void(int param1, int param2) ParamFunction1 = #2;

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        (builtin_literal))
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        (builtin_literal)))

===========
Empty block function definition
===========

void(int param1, int param2) EmptyFunction1 = {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        body: (compound_statement)))

===========
Empty block function definition - pure vararg
===========

void(...) EmptyFunction1 = {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement)))

===========
Empty block function definition - vararg
===========

void(int param1, int param2, ...) EmptyFunction1 = {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        body: (compound_statement)))

===========
Block function definition
===========

void(int param1, int param2) Function1 = {
    a + b;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        body: (compound_statement
          (binary_expression
            left: (identifier)
            right: (identifier)))))

===========
Function definition - arg init
===========

void(int param1 = init, int param2 = 10) Function1 = {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier)
                init: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)
                init: (numeric_literal)))
        name: (identifier)
        body: (compound_statement)))

===========
Function definition - C-style def
===========

void cstyle_fun1(vector arg) {
	call(arg);
};

---

(source_file
    (function_definition
        result: (simple_type)
        name: (identifier)
        parameters: (parameter_list
                        (parameter
                            type: (simple_type)
                            name: (identifier)))
        body: (compound_statement
          (funcall_expression
            function: (identifier)
            arg: (identifier)))))

===========
Frame function definition
===========

void(int param1, int param2) FrameFunction1 = [ $frame1, next ] {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        frame: (frame_identifier)
        frame_function_name: (identifier)
        body: (compound_statement)))

===========
Frame function definition
===========

void(int param1, int param2) FrameFunction1 = [ 12, next ] {};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list
            (parameter
                type: (simple_type)
                name: (identifier))
            (parameter
                type: (simple_type)
                name: (identifier)))
        name: (identifier)
        frame: (integer_frame_literal)
        frame_function_name: (identifier)
        body: (compound_statement)))


===========
Variable definitions
===========

float constFloat = 11.123;
int constInt = 1;
int constNegInt = -1;
int constInt = '1 -12 3';
vector constFloat = '1.0 -12.12 3.4';
string constString = "bla bla bla";
int constLogic = a | b | c;

---

(source_file
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (numeric_literal))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (numeric_literal))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (numeric_literal))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (vector_literal
                   (numeric_literal)
                   (numeric_literal)
                   (numeric_literal)))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (vector_literal
                   (numeric_literal)
                   (numeric_literal)
                   (numeric_literal)))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (string_literal))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (binary_expression
          left: (binary_expression
            left: (identifier)
            right: (identifier))
          right: (identifier))))

===========
Variable definitions
===========

float floatField;
int multiple1, multiple2, multple3;

---

(source_file
    (variable_definition
        type: (simple_type)
        name: (identifier))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        name: (identifier)
        name: (identifier)))

===========
Variable definition - array
===========

float floatField[1];
float floatField[] = {1};

---

(source_file
    (variable_definition
        type: (simple_type)
        name: (identifier)
        array: (numeric_literal))
    (variable_definition
        type: (simple_type)
        name: (identifier)
        value: (array_literal
          (numeric_literal))))

===========
Variable definitions - type modifiers
===========

const float global1;
const static int global2;
nosave int global3;

---

(source_file
    (variable_definition
        type: (simple_type)
        name: (identifier))
    (variable_definition
        type: (simple_type)
        name: (identifier))
    (variable_definition
        type: (simple_type)
        name: (identifier)))

===========
Field definitions
===========

.float floatField;
.int multiple1, multiple2, multple3;

---

(source_file
    (field_definition
        type: (simple_type)
        name: (identifier))
    (field_definition
        type: (simple_type)
        name: (identifier)
        name: (identifier)
        name: (identifier)))

===========
Field definitions - no param function;
===========

.float() floatField;

---

(source_file
    (field_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)))

===========
Modelgen pragmas
===========

$flags 8
$base arg1
$cd /path/to/something
$frame frame1 frame2 frame3
$modelname name
$scale '10 10 10'

---

(source_file
    (modelgen_pragma)
    (modelgen_pragma)
    (modelgen_pragma)
    (modelgen_pragma)
    (modelgen_pragma)
    (modelgen_pragma))

===========
enum definition - simple
===========

enum {
    CONST1,
    CONST2,
    CONST3 = 10
};

---

(source_file
    (enum_definition
      (identifier)
      (identifier)
      (identifier)
      (numeric_literal)))

===========
enum definition - typed
===========

enum: int {
    CONST1,
    CONST2,
    CONST3 = 10
};

---

(source_file
    (enum_definition
        type: (simple_type)
        (identifier)
        (identifier)
        (identifier)
        (numeric_literal)))

===========
enum definition - strongly typed
===========

enum class ReturnCode: int {
    CONST1,
    CONST2,
    CONST3 = 10
};

---

(source_file
    (enum_definition
        name: (identifier)
        type: (simple_type)
        (identifier)
        (identifier)
        (identifier)
        (numeric_literal)))
