test/corpus/expressions.txt
===========
Unary/update expression - simple
===========

void() Function = {
    +a;
    ++b;
    -a;
    b--;
    b++;

};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement
            (unary_expression
              target: (identifier))
            (update_expression
              target: (identifier))
            (unary_expression
              target: (identifier))
            (update_expression
              target: (identifier))
            (update_expression
              target: (identifier)))))

===========
Unary expression - negation
===========

void() Function = {
    !a;
    !(a+b);
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement
            (unary_expression
              target: (identifier))
            (unary_expression
                target: (binary_expression
                    left: (identifier)
                    right: (identifier))))))

===========
Unary expression - mixed
===========

void() Function = {
    -a+1;
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (binary_expression
            (unary_expression
              (identifier))
            (numeric_literal)))))

===========
Binary expression - relational
===========

void() Function = {
    1 == b;
    1 != a;
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (binary_expression
            (numeric_literal)
            (identifier))
        (binary_expression
            (numeric_literal)
            (identifier)))))


===========
Binary expression - addition
===========

void() Function = {
    1 + b;
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (binary_expression
            (numeric_literal)
            (identifier)))))

===========
Field deref expression
===========

void() Function = {
    self.field;
    self->field;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement
          (field_expression
            argument: (identifier)
            field: (identifier))
          (field_expression
            argument: (identifier)
            field: (identifier)))))


===========
Binary expression - subtraction
===========

void() Function = {
    1 - b;
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (binary_expression
            (numeric_literal)
            (identifier)))))

===========
Binary expression - multiplication / division
===========

void() Function = {
    1 * b;
    1 / b;
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (binary_expression
            (numeric_literal)
            (identifier))
          (binary_expression
            (numeric_literal)
            (identifier)))))

===========
Funcall expression
===========

void() Function = {
    call1();
    call2(arg1, arg2, arg3);
    call3(call4());
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement
          (funcall_expression
            function: (identifier))
          (funcall_expression
            function: (identifier)
            arg: (identifier)
            arg: (identifier)
            arg: (identifier))
          (funcall_expression
            function: (identifier)
            arg: (funcall_expression
              function: (identifier))))))

===========
Assignment expression
===========

void() Function = {
   ab = -1;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body:
        (compound_statement
            (assignment_expression
               target: (identifier)
               value: (numeric_literal)))))

===========
Assignment expression - chain
===========

void() Function = {
   ab = cd = 3;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body:
        (compound_statement
            (assignment_expression
               target: (identifier)
               value: (assignment_expression
                          target: (identifier)
                          value: (numeric_literal))))))

===========
Assignment expression - special (+= -= *= /=)
===========

void() Function = {
   ab *= -1;
   b /= -1.1;
   b11 += 101.1;
   c -= d;
};



---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body:
        (compound_statement
            (assignment_expression
               target: (identifier)
               value: (numeric_literal))
            (assignment_expression
               target: (identifier)
               value: (numeric_literal))
            (assignment_expression
               target: (identifier)
               value: (numeric_literal))
            (assignment_expression
               target: (identifier)
               value: (identifier)))))

===========
Assignment expression - field
===========

void() Function = {
   self.ab *= -1;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body:
        (compound_statement
            (assignment_expression
               target: (field_expression
                   argument: (identifier)
                   field: (identifier))
               value: (numeric_literal)))))

===========
Subscript expression
===========

void() Function = {
    a[22];
};

---

(source_file
    (function_definition
        (simple_type)
        (parameter_list)
        (identifier)
        (compound_statement
          (subscript_expression
            (identifier)
            (numeric_literal)))))

===========
Conditional expression
===========

void() Function = {
   a ? 1 : 2;
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body:
        (compound_statement
            (conditional_expression
              condition: (identifier)
              consequence: (numeric_literal)
              alternative: (numeric_literal)))))
