test/corpus/preprocessor.txt


===========
Preprocessor - global ifdef/endif
===========

#ifdef CONST
#endif

---

(source_file
    (preproc_ifdef
        condition: (identifier)))

===========
Preprocessor - global ifndef/endif
===========

#ifndef CONST
void() this = {
};
#endif


---

(source_file
    (preproc_ifdef
        condition: (identifier)
            (function_definition
                result: (simple_type)
                parameters: (parameter_list)
                name: (identifier)
                body: (compound_statement))))

===========
Preprocessor - global ifdef/else/endif
===========

#ifdef CONST
void() this = {
};
#else
void() this = {
};
#endif


---

(source_file
    (preproc_ifdef
        condition: (identifier)
            (function_definition
                result: (simple_type)
                parameters: (parameter_list)
                name: (identifier)
          body: (compound_statement))
        alternative: (function_definition
          result: (simple_type)
          parameters: (parameter_list)
          name: (identifier)
          body: (compound_statement))))

===========
Preprocessor - local ifdef/endif
===========

void() Function = {
#ifdef CONST
    this;
#else
    that;
#endif
};

---

(source_file
    (function_definition
        result: (simple_type)
        parameters: (parameter_list)
        name: (identifier)
        body: (compound_statement
          (preproc_ifdef
            condition: (identifier)
            (identifier)
            alternative: (identifier)))))

===========
Preprocessor - define simple
===========

#define PREPROC_CONST
#define PREPROC_CONST 111
#define PREPROC_CONST some(random)text;

---

(source_file
    (preproc_def
        name: (identifier))
    (preproc_def
        name: (identifier))
    (preproc_def
        name: (identifier)))

===========
Preprocessor - undef
===========

#undef PREPROC_CONST

---

(source_file
    (preproc_undef
        name: (identifier)))
